--- a/index.html
+++ b/index.html
@@ -116,8 +116,20 @@
 </div>
 
 
-<!---------------    услуги    -------------------------->
+<!---------------    контент   -------------------------->
 <div class="img_fon">
+  <!----     about    ---->
+<main class="about">
+    <h3 class="about_title">Магия <br> преображения</h3>
+    <div class="about_info">
+      <div class="about_subtitle_and_img">
+        <p class="about_subtitle">Для тех, кто хочет жить по-настоящему.</p>
+        <img src="img/magic_img1.png" alt="magic" class="about_img">
+      </div>
+      <div class="about_desc">Когда вы чувствуете прикосновение рук мастера, знайте — волшебство уже началось.PLP является порталом в другое измерение.Новой точкой отсчета.Мир ждет вас таким, каким вы мечтаете быть.Мы с радостью помогаем осуществлять мечты.Сделайте счастливее себя и приходите к нам, даже просто выпить чашечку кофе. И вы насладитесь главным — атмосферой тепла, внимания и доброты наполняющей пространство салона BLAIS.P.S. Мы можем и умеем все. </div>
+    </div>
+</main>
+  <!----     услуги    ---->
 <main class="services">
   <h2 class="services_title">Услуги</h2>
   <div class="services_menu">
@@ -197,12 +209,9 @@
     </ul>
   </div>
 </main>
+ <!----     бренды    ---->
 
 
-<!----     about    ---->
-<main class="about">
-  
-</main>
 </div>
   <script type="text/javascript" src="jsandvue/main1.js" defer></script>
 </body>
