--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PLP | Cтудия красоты</title>
+   <!----------        Логотип              ------------>
+  <link rel="shortcut icon" href="img/PLPlogo.svg" type="image/x-icon">
 
    <!----------        Стиль файл              ------------>
   <link rel="stylesheet" href="css/style.css">
@@ -26,7 +28,7 @@
       <!----------        Major              ------------>
   <main class="main_home ">
       <!----------        HEADER              ------------>
-    <header class="header">
+    <header class="header" id="major">
       <nav class="header_nav">
         <a class="header_logo" href="#">
         <img src="img/PLPlogo.svg" alt="Logo">
@@ -37,8 +39,8 @@
         </div>
         <div class="header_menu">
         <a href="#" class="header_burger">
-        <img src="img/burger.svg" alt="Menu" class="header_burger_img">
-        <img src="img/mobileburger.svg" alt="Menu" class="header_burgermobile_img">
+        <img src="img/burger.svg" alt="Menu" class=" header_burger_img " id="btn_burger">
+        <img src="img/mobileburger.svg" alt="Menu" class=" header_burgermobile_img " id="btn_burger">
         </a>
         </div>
       </nav>
@@ -59,13 +61,13 @@
       </div>
 
       <div class="home_social">
-        <a href="#" class="home_social_inst">
+        <a href="" class="home_social_inst" id="err">
           <i class='bx bxl-instagram' ></i>
           </a>
-          <a href="#" class="home_social_vk">
+          <a href="" class="home_social_vk" id="err">
           <i class='bx bxl-vk' ></i>
           </a>
-          <a href="#" class="home_social_whats">
+          <a href="" class="home_social_whats" id="err">
           <i class='bx bxl-whatsapp' ></i>
           </a>
 
@@ -73,7 +75,7 @@
     </div>
 
 
-    <a href="#" class="home_arrow_down">
+    <a href="#about" class="home_arrow_down" id="err">
       <img src="img/Arrow_down.svg" alt=""arrow>
     </a>
 
@@ -88,22 +90,22 @@
   <!------------      Вспывающее меню   ---------------->
   <div class="menu">
     <div class="menu_content">
-      <a href="#" class="menu_btn_close">
+      <a href="#" class="menu_btn_close" id="err">
         <img src="img/close.svg" alt="close">
       </a>
       <div class="menu_item">
         <ul class="menu_link">
           <li class="menu_click">
-            <a href="#">Главная</a>
+            <a href="#major">Главная</a>
           </li>
           <li class="menu_click">
-            <a href="#">Услуги</a>
+            <a href="#about">О нас</a>
           </li>
           <li class="menu_click">
-            <a href="#">Прайс</a>
+            <a href="#services">Услуги</a>
           </li>
           <li class="menu_click">
-            <a href="#">Контакты</a>
+            <a href="#contacts">Контакты</a>
           </li>
         </ul>
       </div>
@@ -118,8 +120,8 @@
 
 <!---------------    контент   -------------------------->
 <div class="img_fon">
-  <!----     about    ---->
-<main class="about">
+  <!----     О нас    ---->
+<main class="about" id="about">
     <h3 class="about_title">Магия <br> преображения</h3>
     <div class="about_info">
       <div class="about_subtitle_and_img">
@@ -130,7 +132,7 @@
     </div>
 </main>
   <!----     услуги    ---->
-<main class="services">
+<main class="services" id="services">
   <h2 class="services_title">Услуги</h2>
   <div class="services_menu">
     <ul class="services_item">
@@ -210,7 +212,61 @@
   </div>
 </main>
  <!----     бренды    ---->
+<main class="brands">
+  <a href="https://www.essie.com/" target="_blank"><img src="img/logo-essie.svg" alt="brand1"  class="brands_img" id="err"></a>
+    <a href="https://www.clinique.ru/" target="_blank"><img src="img/logo-clinique.svg" alt="brand2"  class="brands_img" id="err"></a>
+    <a href="https://naturasiberica.ru/" target="_blank"><img src="img/logo-natura-siberica.svg" alt="brand3"  class="brands_img" id="err"></a>
+    <a href="https://www.amway.com/en_US/artistry" target="_blank"><img src="img/logo-artistry.svg" alt="brand4"  class="brands_img" id="err"></a>
+    <a href="https://gehwol.net/" target="_blank"><img src="img/logo-gehwol.svg" alt="brand5"  class="brands_img" id="err"></a>
+</main>
+ <!----     Связь    ---->
+ <main class="call-me" id="call-me">
+   <h3 class="call-me_title">Обратная связь</h3>
+   <div class="call-me_data">
+     <input type="text" name="" value="" class="call-me_input" placeholder="Ваше имя">
+     <input type="text" name="" value="" placeholder="Ваш телефон" class="call-me_input">
+     <input type="text" name="" value="" placeholder="Ваша почта" class="call-me_input">
+     <a href="#" class="call-me_btn">Отправить</a>
+   </div>
+ </main>
+<!----     Карта    ---->
+<main class="map">
+  <div class="map_info">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1336.7396910933378!2d37.50253678793438!3d55.7042992750233!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54c401640d907%3A0x23eefb62725c55b4!2z0YPQuy4g0KHRgtC-0LvQtdGC0L7QstCwLCA3LCDQnNC-0YHQutCy0LAsIDExOTE5Mg!5e0!3m2!1sru!2sru!4v1661857532068!5m2!1sru!2sru" width="100%" height="460" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+</main>
 
+<footer class="footer" id="contacts">
+  <h3 class="footer_title">Контакты</h3>
+  <div class="footer_info">
+    <div class="footer_info_contacts">ИНН 0000000 <br> КПП 0000000 <br> БИК 0000000 </div>
+    <div class="footer_info_num"><a href="#">+7 999 999 00 00 </a><p>г.Москва, ул. Столетова 7</p>
+      <div class="footer_sotial">
+        <a href="" class="footer_social_inst soc" id="err">
+          <i class='bx bxl-instagram' ></i>
+          </a>
+          <a href="" class="footer_social_vk soc" id="err">
+          <i class='bx bxl-vk' ></i>
+          </a>
+          <a href="" class="footer_social_whats soc" id="err">
+          <i class='bx bxl-whatsapp' ></i>
+          </a>
+
+      </div>
+    </div>
+
+  </div>
+
+  <div class="footer_end">
+    <!-----
+    <img src="img/PLPlogo.svg" alt="logo" class="footer_logo">
+    ---->
+    <p class="footer_copy">copyright 2022</p>
+
+  </div>
+</footer>
+
+<img src="img/btn.svg" alt="button" class="footer_btn">
 
 </div>
   <script type="text/javascript" src="jsandvue/main1.js" defer></script>
