--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <img src="img/PLPlogo.svg" alt="Logo">
       </a>
         <div class="header_nav_info">
-          <a href="#" class="header_nav_info_street">Москва, ул.Столетова 7</a>
-          <a href="#" class="header_nav_info_number">+7 999 999 99 99</a>
+          <a href="" class="header_nav_info_street">Москва, ул.Столетова 7</a>
+          <a href="" class="header_nav_info_number">+7 999 999 99 99</a>
         </div>
         <div class="header_menu">
         <a href="#" class="header_burger">
@@ -78,21 +78,18 @@
     <a href="#about" class="home_arrow_down" id="err">
       <img src="img/Arrow_down.svg" alt=""arrow>
     </a>
-
-
-
-
   </main>
 
 
 
 
   <!------------      Вспывающее меню   ---------------->
+
   <div class="menu">
     <div class="menu_content">
-      <a href="#" class="menu_btn_close" id="err">
-        <img src="img/close.svg" alt="close">
-      </a>
+
+        <img src="img/close.svg" alt="close" class="menu_btn_close">
+
       <div class="menu_item">
         <ul class="menu_link">
           <li class="menu_click">
@@ -140,9 +137,8 @@
       <li class="services_link">
         <div class="services_link_choice">
           <h3 class="services_link_choice_title">Женский зал</h3>
-          <a href="#" class="services_link_choice_openClose">
-            <img src="img/plus.svg" alt="close">
-          </a>
+            <img src="img/plus.svg" alt="close" class="services_link_choice_openClose">
+
         </div>
         <div class="services_link_choice_subtitle">
           <p class="services_desc"></p>
@@ -240,7 +236,7 @@
   <h3 class="footer_title">Контакты</h3>
   <div class="footer_info">
     <div class="footer_info_contacts">ИНН 0000000 <br> КПП 0000000 <br> БИК 0000000 </div>
-    <div class="footer_info_num"><a href="#">+7 999 999 00 00 </a><p>г.Москва, ул. Столетова 7</p>
+    <div class="footer_info_num"><a href="">+7 999 999 00 00 </a><p>г.Москва, ул. Столетова 7</p>
       <div class="footer_sotial">
         <a href="" class="footer_social_inst soc" id="err">
           <i class='bx bxl-instagram' ></i>
@@ -267,6 +263,16 @@
 </footer>
 
 <img src="img/btn.svg" alt="button" class="footer_btn">
+<img src="img/btn_close.png" alt="button" class="footer_btn_close">
+
+<div class="modal_window">
+<div class="modal_cont">
+  <h3 class="modal_title">Спросите нас</h3>
+  <input type="text" name="" value="" placeholder="почта" class="modal_input">
+  <textarea name="name" rows="5" cols="30" placeholder="сообщение" class="modal_txt"></textarea>
+  <button type="button" name="button" class="modal_btn">Отправить</button>
+</div>
+</div>
 
 </div>
   <script type="text/javascript" src="jsandvue/main1.js" defer></script>
